# classify

./: .gitignore  README.md  pyproject.toml  requirements.txt
classification/: correlation.py  pytorch_classifier.py  run_classifier.py  run_classifiers.ipynb  run_classifiers.ps1  run_clustering.py  run_gridsearch.py  sklearn_classifiers.py  sklearn_clustering.py  sklearn_gridsearch.py  text_classifier.py  text_clustering.py  text_encoder.py
classification/.ipynb_checkpoints/: run_classifiers-checkpoint.ipynb
classification/classify/: classifier_result_to_csv.py  pytorch_classifier.py  run_classifier.py  run_gridsearch.py  sklearn_classifiers.py  sklearn_gridsearch.py  text_classifier.py
classification/cluster/: sklearn_clustering.py  text_clustering.py
classification/encode/: text_embedder.py  text_encoder.py
classification/env/: env.py
classification/resultdata/: RESULTS_classification.md
dataprocessing/: train_test_split.py
dataprocessing/letters/: add_language.py  create_classifier_data_letters.py  create_clustering_data.py  epub_to_json.py  fix_author.py  repair_json.py  unify_fields.py
dataprocessing/news/: reduce_labels.py
dataprocessing/sentiment/: csv_to_json.py
search/: elasticsearch_commands.txt  index_letters.ipynb
tests/classification/: pytorch_classifier_test.py  run_classifier_test.py
tests/classification/classify/: pytorch_classifier_test.py  run_classifier_test.py
tests/classification/encode/: text_encoder_test.py
tests/classification/test_data/: classifier_data_eval.jsonl
utils/: logging.py
(+3 files in other folders)
