[tool.poetry]
name = ""
version = "0.1.0"
description = "Some scripts for classification, clustering and search"
authors = ["Stefan Langer <langer.stefan@lmu.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.10 || ~3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
sentence-transformers = "^2.2.2"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
torch = "^2.1.1"
torchtext = "^0.16.1"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "*"
isort = "^5.12.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
